--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,7 +5,7 @@
         <h2 class="mdl-card__title-text"><%= @team.title %></h2>
       </div>
 			<div class="mdl-card__supporting-text">
-				Budget: <%= number_to_currency(@team.cash_balance_cents / 100, precision: 0) %>
+				Budget: <%= number_to_currency(@team.cash_balance_cents, precision: 0) %>
 				<br/>
 				Stadium: <%= @team.stadium.name %> (<%= number_with_delimiter(@team.stadium.capacity, delimiter: ',') %>)
 			</div>
