--- a/app/views/transfers/new.html.erb
+++ b/app/views/transfers/new.html.erb
@@ -1,3 +1,8 @@
-<h1>New transfer</h1>
-
-<%= render 'form' %>
+<div class="col-sm-12">
+  <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+		<div class="mdl-card__title">
+			<h2 class="mdl-card__title-text">Propose transfer</h2>
+		</div>
+		<%= render 'form' %>
+	</div>
+</div>
